Google Analytics Code Updated

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,16 @@
       gtag('config', 'UA-88583152-1');
     </script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMQY9NLY9Q"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HMQY9NLY9Q');
+    </script>
+
   <meta charset="utf-8">
   <title>Viral Patel Studio - Creative | Passionate | Visionary</title>
   <base href="/">
